src/render/styles/style.css.less
@import "mixins.less";

@theme-base: #ffffff;
@theme-color: #007dfd;
@theme-dark: #1a1a1a;
@theme-light: #f2f2f2;

@ui-padding: 50px;
@container-inverse-padding: -65px;

body,html {
	background: @theme-base;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
}

/****************
Typography
****************/

@font-face {
    font-family: 'apercubold';
    src: url('/fonts/apercu_bold-webfont.woff2') format('woff2'), url('/fonts/apercu_bold-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'apercumedium';
    src: url('/fonts/apercu_medium-webfont.woff2') format('woff2'), url('/fonts/apercu_medium-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}
@font-face {
    font-family: 'apercu_monoregular';
    src: url('/fonts/apercu_mono-webfont.woff2') format('woff2'), url('/fonts/apercu_mono-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;
}

h1,h2,h3,h4,h5,h6 {
	font-family: 'apercumedium';
	color: @theme-color;
	z-index: 10 !important;
	letter-spacing: -1px;
	margin-top: 0;
}

h1 {
	font-size: 72px;
}
h2 {
	font-size: 48px;
}

h2,h3,h4,h5,h6 {
	text-transform: uppercase;
}

p {
	color: @theme-dark;
	font-family: 'Roboto', sans-serif;
	font-size: 16px;
	line-height: 26px;
	letter-spacing: 1px;
}

.mono {
	font-family: 'apercu_monoregular';
	text-transform: uppercase;	
}

/**************
Navbars
**************/

.navbar {
	margin: 0;
	padding: 0;
}

/************
Containers
************/

section {
	padding: 0;
	margin: 0;
	width: 100%;
	min-height: 100vh;
}

section.landing {
    background: url(/images/header_canvas.jpg) no-repeat center center;
    -webkit-background-size: cover; /* For WebKit*/
    -moz-background-size: cover;    /* Mozilla*/
    -o-background-size: cover;      /* Opera*/
    background-size: cover;
    padding-top: @ui-padding;
}

section.light {
	background: @theme-light;
}

section.dark {
	background: @theme-dark;
	padding-top: @ui-padding;
	padding-bottom: @ui-padding;
	img {
		display: block;
		margin: 25px auto;
		width: 100%;
		max-height: 60px;
	}
	h1,h2,h3,h4,h5,h6 {
		text-align: center;
	}
	h4 {
		display: block;
		margin: 0 auto;
		width: 75%;
	}
}

section.section-small {
	min-height: auto;
}

.header {
	background: @theme-color;
	position: absolute;
	width: 100%;
	bottom: 0;
	margin: 0;
	padding: 0;
	padding-top: @ui-padding/2;
	h1, h2, h3, h4, h5, h6, p {
		color: @theme-light;
	}
	h1, h2, h3, h4, h5, h6 {
		text-transform: capitalize;
	}
	h2 {
		font-size: 42px;
		text-align: right;
		margin: 0 @ui-padding;
	}
	.mono {
		color: @theme-dark;
		text-align: center;
	}
	img {
		top: @ui-padding !important;
	}
	.row {
		padding: 0;
		padding: 15px 0;
		margin-left: 15px;
		margin-right: 15px;
	}
	#tagline {
		padding-bottom: 0;
	}
}

.container {
	display: block;
	width: 100%;
	margin: 0;
	padding: 0;
}

.row {
	margin: 0 auto;
	padding: @ui-padding;
}

.table-row {
	display: table;
	table-layout: fixed;
}

.table-row [class^="col-"] {
	display: table-cell;
	float: none;
}

footer {
	background: @theme-dark;
	padding: @ui-padding;
	p {
		text-align: center;
		color: @theme-light;
		padding-right: 25px;
	}
	.social-media {
		display: inline;
		margin-left: 25px;
		a, a:hover, a:active, a:focus, a:visited {
			color: @theme-light;
			font-size: 18px;
			text-decoration: none;
			padding-right: 5px;
		}
	}
}
/****************
Components
****************/

.btn-primary {
	background: transparent;
	color: @theme-dark;
	font-family: 'apercu_monoregular';
	text-transform: uppercase;
	border-color: @theme-dark;
	border-top-left-radius: 10px;
	border-top-right-radius: 10px;	
	border-bottom-left-radius: 0;
	border-bottom-right-radius: 0;
	border-bottom: none;
	width: 150px;
	margin-right: @ui-padding;
	&:hover, &:active, &:focus {
		background: @theme-color;
		border-color: @theme-color;
	}
}

hr {
	border-color: @theme-dark;
}


/****************
Image Placement
****************/

.parent-element {
    position: relative;
}

.child-element-center {
   position: absolute;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
}

.child-element-top {
   position: absolute;
   top: @ui-padding;
}

.child-element {
   position: absolute;
   top: 50%;
   transform: translate(0, -50%);
}

.image-bg-right {
	position: absolute;
	right: 0;
	max-width: 50%;
	z-index: 1 !important;
}

.image-bg-left {
	position: absolute;
	left: 0;
	width: 25%;
}

.image-bg-right-2 {
	position: absolute;
	right: 0;
	max-width: 40%;
	z-index: 1 !important;
}

.image-bleed {
	max-width: 100%;
	margin-right: @container-inverse-padding;
	margin-left: @container-inverse-padding;
	z-index: 1 !important;
}

/****************
Content-Specific
****************/

#logo {
	width: 100%;
	max-width: 200px;
	display: block;
	margin: 0 auto;
}

#join {
	position: absolute;
	top: @ui-padding;
	right: @ui-padding;
}

.overlay {
	text-align: right;
	z-index: 100 !important;
}

#description {
	p {
		margin: @ui-padding 0;
	}
	button {
		min-width: @ui-padding;
		margin-top: @ui-padding;
	}
	img {
		z-index: 1 !important;
	}
	.container {
		height: 100%;
	}

}

.blue-block {
	background-color: @theme-color !important;
	border-radius: @ui-padding;
	h1,h2,h3,h4,h5,h6,p {
		color: @theme-light;
	}
	width: 100%;
	height: 100%;
}

